--- a/src/css/sass/style.scss
+++ b/src/css/sass/style.scss
@@ -1,68 +1,10 @@
 @import '../css/cyclone-reset.css';
+@import './home.scss';
 @import './nav-button.scss';
 @import './nav.scss';
 @import './story.scss';
 @import './products.scss';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
-@-webkit-keyframes wobble-hor-bottom {
-  0%,
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-  }
-  15% {
-    -webkit-transform: translateX(-30px) rotate(-6deg);
-            transform: translateX(-30px) rotate(-6deg);
-  }
-  30% {
-    -webkit-transform: translateX(15px) rotate(6deg);
-            transform: translateX(15px) rotate(6deg);
-  }
-  45% {
-    -webkit-transform: translateX(-15px) rotate(-3.6deg);
-            transform: translateX(-15px) rotate(-3.6deg);
-  }
-  60% {
-    -webkit-transform: translateX(9px) rotate(2.4deg);
-            transform: translateX(9px) rotate(2.4deg);
-  }
-  75% {
-    -webkit-transform: translateX(-6px) rotate(-1.2deg);
-            transform: translateX(-6px) rotate(-1.2deg);
-  }
-}
-@keyframes wobble-hor-bottom {
-  0%,
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-  }
-  15% {
-    -webkit-transform: translateX(-30px) rotate(-6deg);
-            transform: translateX(-30px) rotate(-6deg);
-  }
-  30% {
-    -webkit-transform: translateX(15px) rotate(6deg);
-            transform: translateX(15px) rotate(6deg);
-  }
-  45% {
-    -webkit-transform: translateX(-15px) rotate(-3.6deg);
-            transform: translateX(-15px) rotate(-3.6deg);
-  }
-  60% {
-    -webkit-transform: translateX(9px) rotate(2.4deg);
-            transform: translateX(9px) rotate(2.4deg);
-  }
-  75% {
-    -webkit-transform: translateX(-6px) rotate(-1.2deg);
-            transform: translateX(-6px) rotate(-1.2deg);
-  }
-}
 
 @font-face {
   font-family: 'Hello Headline';
@@ -79,40 +21,6 @@
 
   --color-text-primary: white;
   --color-text-secondary: #704241;
-}
-
-.page-content {
-  padding-inline: 1.5rem;
-}
-
-.section-content {
-  margin-inline: auto;
-  padding-block: 25px;
-  width: min(100%, 1200px);
-}
-
-.shape-divider {
-  left: 0;
-  line-height: 0;
-  overflow: hidden;
-  position: absolute;
-  width: 100%;
-
-  svg {
-    display: block;
-    height: 55px;
-    position: relative;
-    width: calc(100% + 1.3px);
-  }
-}
-
-.shape-divider-top {
-  top: -1px;
-}
-
-.shape-divider-bottom {
-  bottom: -1px;
-  transform: rotate(180deg);
 }
 
 body {
@@ -176,110 +84,6 @@ header {
 main {
   section {
     position: relative;
-
-    &.shop-display-section {      
-      .shop-image {
-        object-fit: cover;
-        margin-inline: auto;
-        min-height: 333px;
-        width: min(100%, 1200px);
-      }
-
-      .shape-divider-one .shape-fill {
-        fill:var(--color-primary);
-      }
-
-      .shape-divider-two .shape-fill {
-        fill: var(--color-secondary);
-      }
-    }
-
-    &.testimonial-section {
-      background-color: var(--color-secondary);
-
-      .testimonial-section-content {
-        align-items: center;
-        display: grid;
-        gap: 1rem;
-        margin-inline: auto;
-        place-items: center;
-      }
-
-      .testimonial-quote,
-      .testimonial-figcaption {
-        color:var(--color-text-secondary);
-        font-size: var(--body-text-size);
-        font-style: italic;
-        margin-bottom: 1rem;
-        text-align: center;
-      }
-
-      .testimonial-figcaption {
-        font-weight: bold;
-      }
-
-      .coffee-cup {
-        -webkit-animation: wobble-hor-bottom 3s both infinite;
-        animation: wobble-hor-bottom 3s both infinite;
-        aspect-ratio: 1;
-        filter: drop-shadow(3px 5px 5px var(--color-primary));
-        height: clamp(100px, 33vw, 300px);
-      }
-
-      .emphasized-text {
-        font-weight: 700;
-        font-size: clamp(0.8313rem, 2.5vw, 0.938rem);
-
-      }
-
-      .shape-divider-three .shape-fill {
-        fill:var(--color-primary);
-      }
-    }
-
-    &.information-section {
-      .information-section-content {
-        display: grid;
-        gap: 2rem;
-
-        .information-heading {
-          font-weight: bold;
-          font-size: clamp(0.8313rem, 2vw, 1rem);
-          margin-bottom: 1rem;
-        }
-
-        .information-sub-heading {
-          font-weight: bold;
-          margin-bottom: 0.25rem;
-        }
-
-        .hours-content-container {
-          display: flex;
-          flex-direction: column;
-
-          hr {
-            margin: 0;
-          }
-        }
-
-        .information-sub-container {
-          margin-bottom: 1rem;
-        }
-
-        .day-container {
-          align-items: center;
-          display: flex;
-          font-size: var(--body-text-size);
-          gap: 3rem;
-          justify-content: space-between;
-        }
-
-        .information-bottom-section {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-        }
-      }
-    }
   }
 }
 
@@ -306,17 +110,6 @@ footer {
       opacity: 0.8;
       transform: scale(1.1) rotate(8deg);
     }
-  }
-}
-
-@media (min-width: 768px) {
-  .testimonial-section-content {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .information-section-content {
-    gap: 5rem;
-    grid-template-columns: repeat(2, 1fr);
   }
 }
 
